Fixes spacing issues for active styles.

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -23,7 +23,7 @@ body {
   --bg: #fff;
   --text-color: #555;
   --p-text-color: #555;
-  --shadow: 1px 1px 4px #898989;
+  --shadow: 1px 1px 2px #898989;
   /* --link-color: #639A67; */
   --link-color: #205D67;
   --link-hover: #205D67;
